# Realtime-UAV-Gait

./: .gitattributes  .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml  requirements.txt  run_stream.bat  run_web.bat  setup_windows.ps1
checkpoints/: README.md
checkpoints/Drone-YOLO/: best1.pt
checkpoints/gait_model/: GaitBase_DronGait1-60000.pt
configs/gaitbase/: gaitbase_da_dronegait1.yaml  gaitbase_da_dronegait2.yaml  gaitbase_multi_view_loss.yaml
demo/: README.md  run_stream.bat  run_web.bat
demo/checkpoints/: README.md
demo/libs/: cython_bbox.py  merge_broken_track_dirs.py  recognise_uav.py  samdemo.py  seg_picture_fairmot.py  seg_picture_yolov8seg.py  seg_video.py  segment_mmln.py  track_id_merge.py  track_yolov8.py
demo/libs/model/: baselineDemo.py
docs/: PUBLISHING.md  RELEASE_AUDIT.md  WINDOWS_DEPLOY.md
gait_runtime/: README.md
gait_runtime/model/: baselineDemo.py  transform.py
gait_runtime/paddle/: infer.py  seg_demo.py  seg_example.py
gait_runtime/tracker/: byte_tracker.py
gait_runtime/tracking_utils/: predictor_yolov8.py
legacy/legacy_scripts/: README.md  app.py  evaluate.py  main.py  mutil_main.py  recognise.py  seg_picture.py  seg_picture_sam2.py  segment.py  segment_uav.py  track.py  track_uav.py
opengait/evaluation/: evaluator.py
realtime_gait/: CHANGELOG.md  README.md  WINDOWS_DEPLOY.md  __init__.py  input.py  main.py  pipeline.py  register_gallery.py  requirements-windows.txt  run_stream.py  stream_reader.py
realtime_gait/config/: __init__.py  default.yaml  settings.py
realtime_gait/core/: __init__.py  frame_scheduler.py  time_scheduler.py  track_buffer.py  track_recognition.py  types.py
realtime_gait/examples/: feed_frames.py
realtime_gait/modules/: __init__.py  detector.py  recognizer.py  segmentor.py  tracker.py
realtime_gait/scripts/: build_windows_full_bundle.py  run_stream.bat  run_video.bat  run_web.bat  setup_windows.ps1
realtime_gait/utils/: __init__.py  gallery_io.py  paths.py  person_id.py  person_registry.py  silhouette.py  snapshot.py  text_draw.py  visualize.py
realtime_gait/web/: __init__.py  __main__.py  server.py  session.py
(+121 files in other folders)
