[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-gait"
version = "0.1.0"
description = "Real-time drone-view gait recognition with detection, tracking, segmentation, and gallery matching."
readme = "README.md"
requires-python = ">=3.9,<3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Realtime Gait Contributors" }
]
keywords = [
  "gait-recognition",
  "drone",
  "computer-vision",
  "tracking",
  "rtsp"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Recognition"
]
dependencies = [
  "numpy>=1.23,<2",
  "opencv-python<=4.6.0",
  "loguru>=0.7.0",
  "PyYAML>=6.0",
  "tqdm",
  "scipy",
  "scikit-image",
  "scikit-learn",
  "Pillow",
  "prettytable",
  "tabulate",
  "tensorboard",
  "thop",
  "motmetrics",
  "onnx",
  "onnxruntime",
  "onnxoptimizer",
  "onnx-simplifier",
  "ninja",
  "filelock",
  "h5py",
  "kornia",
  "cython-bbox==0.1.3",
  "filterpy",
  "lap",
  "ultralytics>=8.2.0",
  "av>=10.0.0",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.22.0",
  "pypinyin>=0.49.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.5"
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/realtime-gait"
Documentation = "https://github.com/YOUR_USERNAME/realtime-gait/tree/main/docs"
Issues = "https://github.com/YOUR_USERNAME/realtime-gait/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["realtime_gait*", "opengait*"]
exclude = ["output*", "demo.checkpoints*"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
  "gait_runtime/mmseg",
  "gait_runtime/paddle",
  "gait_runtime/ultralytics"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
